2005-01-28  Mike Kestner  <mkestner@novell.com>

	* generator/ReturnValue.cs : use ToNativeReturnType for ToNativeType
	instead of MarshalType.
	* generator/Signal.cs : deal with boxed return values. beef up return
	handling in the default handler generation code.
	* generator/SignalHandler.cs : use ToNative return types for native 
	callbacks. Remove redundant casting/conversion in callback impl.
	[Fixes #71899]

2005-01-28  Dan Winship  <danw@novell.com>

	* glib/Object.cs (AddNotification, RemoveNotification): methods to
	subscribe to the "notify" signal (with property details). [#71684]
	* glib/GLibSharp.voidObjectIntPtrSignal.cs: autogenerated, for
	notifications
	* glib/NotifyHandler.cs: sort of autogenerated

2005-01-28  Mike Kestner  <mkestner@novell.com>

	* gtk/Dialog.custom : add a params array for button info to the ctor.
	* gtk/FileChooserDialog.custom : add a params array for button info to 
	both ctors.  Chain them to IntPtr.Zero.
	* gtk/Gtk.metadata : hide the ellipsis ctors for the dialog types.
	[Fixes #71818]
	* sample/GtkDemo/DemoDialog.cs : make the InteractiveDialog use the
	new Dialog ctor as it does in the c version.

2005-01-27  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeSelection.cs : use new GetSelectedRows() overload.
	* gtk/TreeSelection.custom : add a GetSelectedRows overload without the
	out model param. [Fixes #71814]

2005-01-27  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeView.cs : fix the value creation in the ctor.

2005-01-26  Mike Kestner  <mkestner@novell.com>

	* glib/Value.cs : add a private debugging DllImport for ref_counts
	since the glue is there already.  g_value_get_object returns an
	unowned ref, so don't pretend like we own it. Make get_Val work for
	GObject subclasses. [Fixes #71125]

2005-01-26  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeView.cs : always use CreateNativeObject.

2005-01-26  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide 3 IM related internal types. [Fixes #71021]
