@@ -1163,7 +1163,7 @@
       <method name="Grab" cname="gnome_canvas_item_grab">
         <return-type type="int"/>
         <parameters>
-          <parameter type="unsigned int" name="event_mask"/>
+          <parameter type="unsigned-int" name="event_mask"/>
           <parameter type="GdkCursor*" name="cursor"/>
           <parameter type="guint32" name="etime"/>
         </parameters>
