@@ -619,8 +619,9 @@ sub parseParms
 			$fmt = $1; $args = $2;
 			($params_el, @junk) = $el->getElementsByTagName ("parameters");
 			(@params) = $params_el->getElementsByTagName ("parameter");
-			$params[$fmt-1]->setAttribute ("printf_format", "true");
-			$params[$args-1]->setAttribute ("printf_format_args", "true");
+			$offset = 1 + $drop_1st;
+			$params[$fmt-$offset]->setAttribute ("printf_format", "true");
+			$params[$args-$offset]->setAttribute ("printf_format_args", "true");
 		}
 	}
 }
@@ -754,6 +755,7 @@ sub addParamsElem
 		$parm =~ s/(\w+)\s+const /const \1 /g;
 		$parm =~ s/(\*+)\s*const\s+/\1 /g;
 		$parm =~ s/const\s+/const-/g;
+		$parm =~ s/unsigned\s+/unsigned-/g;
 		if ($parm =~ /(.*)\(\s*\**\s*(\w+)\)\s+\((.*)\)/) {
 			my $ret = $1; my $cbn = $2; my $params = $3;
 			$cb_elem = addNameElem($parms_elem, 'callback', $cbn);
