@@ -1,3 +1,11 @@
+2005-01-31  Mike Kestner  <mkestner@novell.com>
+
+	* generator/SymbolTable.cs : handle unsigned-*.
+	* parser/gapi2xml.pl : handle const unsigned * parameters. Also fix
+	a G_GNUC_PRINTF parsing bug exposed by a GMime.
+	* */*-api.raw : regen.
+	[Fixes #71825]
+
 2005-01-28  Mike Kestner  <mkestner@novell.com>
 
 	* generator/ReturnValue.cs : use ToNativeReturnType for ToNativeType
